# untitled

./: Makefile  README.md  app.cpp
assets/romfs/lang/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  zh-Hans.json  zh-Hant.json
lib/switch-libpulsar/examples/: CMakeLists.txt
src/: app.cpp  app.hpp  audio_manager.cpp  audio_manager.hpp  lang_manager.cpp  lang_manager.hpp  nvg_util.cpp  nvg_util.hpp
